a stacked solution for the URL and image spacing issue on the homepage for smaller screens, switched to stacked elements for mobile and row for bigger screens

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -132,16 +132,17 @@ body {
 
 .aside {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
 }
 
 .aside h4 {
-  padding: 5px;
+  padding: 6px;
   border-bottom: 2px solid #dedede;
 }
 
 .aside-p {
-  padding: 8px;
+  padding: 10px;
 }
 
 .aside a {
@@ -156,6 +157,14 @@ body {
 .aside a:hover {
   background-color: var(--background-color);
   color: var(--hover-text-color);
+}
+
+@media (min-width: 768px) {
+  .aside {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 /*countdown component*/
@@ -186,7 +195,6 @@ body {
   background-color: #fff8f8e6;
   box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.1);
   margin: 2cap auto;
-  max-width: 900px;
   color: #333;
 }
 
